--- a/.github/workflows/jmeter-tests.yml
+++ b/.github/workflows/jmeter-tests.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           apache-jmeter-5.5/bin/jmeter -n -t jmeter/test_plan.jmx -l jmeter/results/results.jtl -e -o jmeter/global-report
 
-      - name: ⬇️ gh-pages Clones (si existe)
+      - name: ⬇️ gh-pages Clone
         run: |
           git clone --branch gh-pages https://github.com/${{ github.repository }} gh-pages-temp || echo "No exist gh-pages yet"
           if [ -d gh-pages-temp/reports ]; then
