--- a/.github/workflows/jmeter-tests.yml
+++ b/.github/workflows/jmeter-tests.yml
@@ -30,7 +30,15 @@ jobs:
 
       - name: 🚀 Run JMeter Test HTML
         run: |
-          apache-jmeter-5.5/bin/jmeter -n -t jmeter/test_plan.jmx -l jmeter/results/results.jtl -e -o jmeter/global-report
+          apache-jmeter-5.4.1/bin/jmeter -n -t your_test_plan.jmx \
+          -Jthreads=$THREADS \
+          -Jrampup=$PERIOD \
+          -Jthreadgroup=$GROUP_NAME \
+          -l results.jtl
+        env:
+        GROUP_NAME: ${{ secrets.GROUP_NAME }}
+        PERIOD: ${{ secrets.PERIOD }}
+        THREADS: ${{ secrets.THREADS }}
 
       # Clonamos la rama gh-pages en un directorio aparte
       - name: Checkout gh-pages branch
