--- a/.github/workflows/jmeter-tests.yml
+++ b/.github/workflows/jmeter-tests.yml
@@ -30,11 +30,12 @@ jobs:
 
       - name: 🚀 Run JMeter Test HTML
         run: |
-          apache-jmeter-5.4.1/bin/jmeter -n -t your_test_plan.jmx \
+          apache-jmeter-5.5/bin/jmeter -n -t jmeter/test_plan.jmx\  
           -Jthreads=$THREADS \
           -Jrampup=$PERIOD \
           -Jthreadgroup=$GROUP_NAME \
-          -l results.jtl
+          -l jmeter/results/results.jtl \
+          -e -o jmeter/global-report
         env:
           GROUP_NAME: ${{ secrets.GROUP_NAME }}
           PERIOD: ${{ secrets.PERIOD }}
