--- a/.github/workflows/jmeter-tests.yml
+++ b/.github/workflows/jmeter-tests.yml
@@ -62,18 +62,46 @@ jobs:
           echo "Report generated in: reports/$TIMESTAMP"
 
       # Generamos un índice HTML que liste todas las carpetas (reportes) dentro de "reports"
-      - name: Generate report index
+      - name: 📝 Generate report index with improved design
         run: |
-          echo "<html><head><title>JMeter Reports</title></head><body>" > reports/index.html
-          echo "<h1>JMeter Reports</h1><ul>" >> reports/index.html
-          for dir in reports/*/ ; do
-            [ -d "$dir" ] || continue
-            dirname=$(basename "$dir")
-            if [ "$dirname" != "index.html" ]; then
-              echo "<li><a href=\"${dirname}/\">${dirname}</a></li>" >> reports/index.html
-            fi
-          done
-          echo "</ul></body></html>" >> reports/index.html
+          cat << 'EOF' > reports/index.html
+          <!DOCTYPE html>
+          <html lang="es">
+          <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>JMeter Reports</title>
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+            <style>
+              body { margin: 20px; }
+              h1 { margin-bottom: 20px; }
+              ul { list-style-type: none; padding: 0; }
+              li { margin-bottom: 10px; }
+              a { text-decoration: none; color: #0d6efd; }
+              a:hover { text-decoration: underline; }
+            </style>
+          </head>
+          <body>
+            <div class="container">
+              <h1 class="display-4">JMeter Reports</h1>
+              <ul>
+          EOF
+
+            for dir in reports/*/ ; do
+              [ -d "$dir" ] || continue
+              dirname=$(basename "$dir")
+              if [ "$dirname" != "index.html" ]; then
+                echo "<li><a href=\"${dirname}/\">${dirname}</a></li>" >> reports/index.html
+              fi
+            done
+
+          cat << 'EOF' >> reports/index.html
+              </ul>
+            </div>
+          </body>
+          </html>
+          EOF
+
 
       # Publicamos todo el contenido del directorio "reports"
       - name: 🌐 Publish reports in GitHub Pages
