--- a/.github/workflows/jmeter-tests.yml
+++ b/.github/workflows/jmeter-tests.yml
@@ -38,17 +38,15 @@ jobs:
 
       - name: 🚀 Run JMeter Test HTML
         run: |
-           apache-jmeter-5.5/bin/jmeter -n -t jmeter/test_plan.jmx \
+          apache-jmeter-5.5/bin/jmeter -n -t jmeter/test_plan.jmx \
             -l jmeter/results/results.jtl -e -o jmeter/global-report
 
-      # Clonamos la rama gh-pages en un directorio separado
       - name: Checkout gh-pages branch
         uses: actions/checkout@v4
         with:
           ref: gh-pages
           path: gh-pages
 
-      # Fusionamos (copiamos) todo el contenido previamente publicado al directorio local "reports"
       - name: Merge previous reports from gh-pages branch
         run: |
           rm -rf reports
@@ -57,7 +55,6 @@ jobs:
             cp -R gh-pages/* reports/
           fi
 
-      # Creamos la carpeta para el reporte actual (con timestamp) y copiamos el reporte generado
       - name: Create folder for current report
         run: |
           TIMESTAMP=$(date +%Y%m%d-%H%M%S)
@@ -65,49 +62,76 @@ jobs:
           cp -R jmeter/global-report reports/$TIMESTAMP
           echo "Report generated in: reports/$TIMESTAMP"
 
-      # Generamos un índice HTML que liste todas las carpetas (reportes) dentro de "reports"
-      - name: 📝 Generate report index with improved design
+      - name: 📝 Generate advanced report index
         run: |
           cat << 'EOF' > reports/index.html
           <!DOCTYPE html>
           <html lang="es">
           <head>
             <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>JMeter Reports</title>
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <title>JMeter Reports Dashboard</title>
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
             <style>
-              body { margin: 20px; }
-              h1 { margin-bottom: 20px; }
-              ul { list-style-type: none; padding: 0; }
-              li { margin-bottom: 10px; }
-              a { text-decoration: none; color: #0d6efd; }
-              a:hover { text-decoration: underline; }
+              body {
+                background-color: #f8f9fa;
+                padding-top: 20px;
+              }
+              .report-card {
+                transition: transform 0.2s ease-in-out;
+                box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+              }
+              .report-card:hover {
+                transform: scale(1.03);
+              }
+              .card-title {
+                font-size: 1.25rem;
+              }
+              .footer {
+                margin-top: 50px;
+                text-align: center;
+                font-size: 0.9rem;
+                color: #6c757d;
+              }
             </style>
           </head>
           <body>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
+              <div class="container">
+                <a class="navbar-brand" href="#">JMeter Reports Dashboard</a>
+              </div>
+            </nav>
             <div class="container">
-              <h1 class="display-4">JMeter Reports</h1>
-              <ul>
+              <div class="row">
           EOF
-
-            for dir in reports/*/ ; do
-              [ -d "$dir" ] || continue
-              dirname=$(basename "$dir")
-              if [ "$dirname" != "index.html" ]; then
-                echo "<li><a href=\"${dirname}/\">${dirname}</a></li>" >> reports/index.html
-              fi
-            done
-
+          for dir in reports/*/ ; do
+            [ -d "$dir" ] || continue
+            dirname=$(basename "$dir")
+            if [ "$dirname" != "index.html" ]; then
+              echo "          <div class=\"col-md-4 mb-4\">" >> reports/index.html
+              echo "            <div class=\"card report-card\">" >> reports/index.html
+              echo "              <div class=\"card-body\">" >> reports/index.html
+              echo "                <h5 class=\"card-title\">$dirname</h5>" >> reports/index.html
+              echo "                <p class=\"card-text\">Reporte generado el $dirname. Haz clic para ver el detalle.</p>" >> reports/index.html
+              echo "                <a href=\"${dirname}/\" class=\"btn btn-primary\">Ver Reporte</a>" >> reports/index.html
+              echo "              </div>" >> reports/index.html
+              echo "            </div>" >> reports/index.html
+              echo "          </div>" >> reports/index.html
+            fi
+          done
           cat << 'EOF' >> reports/index.html
-              </ul>
+              </div>
             </div>
+            <footer class="footer">
+              <div class="container">
+                <p>&copy; $(date +%Y) JMeter Reports Dashboard. Todos los derechos reservados.</p>
+              </div>
+            </footer>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
           </body>
           </html>
           EOF
 
-
-      # Publicamos todo el contenido del directorio "reports"
       - name: 🌐 Publish reports in GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
