--- a/.github/workflows/jmeter-tests.yml
+++ b/.github/workflows/jmeter-tests.yml
@@ -76,9 +76,9 @@ jobs:
           --header 'Content-Type: application/json' \
           --header 'Authorization: Basic bHVpc2YuYXJyb3lhdmUxQGdtYWlsLmNvbTpBVEFUVDN4RmZHRjA2ODgxTGlWaTNRc2ZZSklnUW9VM3NXS0otNUF1eVFuWHA2TnV0NlRzaklydzRlZGdfak45YUY4WWhVSmZpRjAwVnRIV1p1WXZLejJoeXRoWndOUXBJcF9nVndjSjFNYjM0YjBiMklrNmdDUDkxX0JiWkotUzVZaDNNMXMxOEp5U3cwYWtpdkxOSkZ5c0loczh3dUZGLVJGbXJJOTltOVJBMjBEMnF1YkVvdWs9Rjk4MTk2Qjc=' \
           --header 'Cookie: atlassian.xsrf.token=250244e08c61498449d5f6f3fb405f13368f68ce_lin' \
-          --data '{
-            "body": "Execution has finished: https://github-test-organiza.github.io/jmeterTest/$TIMESTAMP"
-          }'
+          --data "{
+            \"body\": \"Execution has finished: https://github-test-organiza.github.io/jmeterTest/$TIMESTAMP\"
+          }"
 
       - name: 📝 Generate advanced report index
         run: |
