--- a/.github/workflows/jmeter-tests.yml
+++ b/.github/workflows/jmeter-tests.yml
@@ -66,7 +66,7 @@ jobs:
         run: |
           cat << 'EOF' > reports/index.html
           <!DOCTYPE html>
-          <html lang="es">
+          <html lang="en">
           <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -84,8 +84,8 @@ jobs:
               .report-card:hover {
                 transform: scale(1.03);
               }
-              .card-title {
-                font-size: 1.25rem;
+              .filter-container {
+                margin-bottom: 30px;
               }
               .footer {
                 margin-top: 50px;
@@ -102,18 +102,45 @@ jobs:
               </div>
             </nav>
             <div class="container">
-              <div class="row">
+              <div class="row filter-container">
+                <div class="col-md-6">
+                  <label for="productFilter" class="form-label">Filter by Product:</label>
+                  <select id="productFilter" class="form-select">
+                    <option value="all">All</option>
+                    <option value="Data governance">Data governance</option>
+                    <option value="ATM">ATM</option>
+                  </select>
+                </div>
+                <div class="col-md-6">
+                  <label for="dateFilter" class="form-label">Filter by Date:</label>
+                  <input type="date" id="dateFilter" class="form-control">
+                </div>
+              </div>
+              <div class="row" id="cardsContainer">
           EOF
+          # Loop through each report folder (excluding index.html)
           for dir in reports/*/ ; do
             [ -d "$dir" ] || continue
             dirname=$(basename "$dir")
             if [ "$dirname" != "index.html" ]; then
-              echo "          <div class=\"col-md-4 mb-4\">" >> reports/index.html
+              # Extract parts from dirname assuming format YYYYMMDD-HHMMSS
+              year=${dirname:0:4}
+              month=${dirname:4:2}
+              day=${dirname:6:2}
+              hour=${dirname:9:2}
+              minute=${dirname:11:2}
+              # Convert month to abbreviation
+              months=(Jan Feb Mar Apr May Jun Jul Aug Sep Oct Nov Dec)
+              month_index=$(echo $((10#$month - 1)))
+              month_str=${months[$month_index]}
+              formatted_date="$day $month_str $year $hour:$minute"
+              iso_date="$year-$month-$day"
+              echo "          <div class=\"col-md-4 mb-4\" data-product=\"Data governance\" data-date=\"$iso_date\">" >> reports/index.html
               echo "            <div class=\"card report-card\">" >> reports/index.html
               echo "              <div class=\"card-body\">" >> reports/index.html
-              echo "                <h5 class=\"card-title\">$dirname</h5>" >> reports/index.html
-              echo "                <p class=\"card-text\">Reporte generado el $dirname. Haz clic para ver el detalle.</p>" >> reports/index.html
-              echo "                <a href=\"${dirname}/\" class=\"btn btn-primary\">Ver Reporte</a>" >> reports/index.html
+              echo "                <h5 class=\"card-title\">Data governance - $formatted_date</h5>" >> reports/index.html
+              echo "                <p class=\"card-text\">Report generated on $formatted_date. Click to view details.</p>" >> reports/index.html
+              echo "                <a href=\"${dirname}/\" class=\"btn btn-primary\">View Report</a>" >> reports/index.html
               echo "              </div>" >> reports/index.html
               echo "            </div>" >> reports/index.html
               echo "          </div>" >> reports/index.html
@@ -124,10 +151,26 @@ jobs:
             </div>
             <footer class="footer">
               <div class="container">
-                <p>&copy; $(date +%Y) JMeter Reports Dashboard. Todos los derechos reservados.</p>
+                <p>&copy; $(date +%Y) JMeter Reports Dashboard. All rights reserved.</p>
               </div>
             </footer>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+            <script>
+              document.getElementById('productFilter').addEventListener('change', filterCards);
+              document.getElementById('dateFilter').addEventListener('change', filterCards);
+              function filterCards() {
+                var productValue = document.getElementById('productFilter').value;
+                var dateValue = document.getElementById('dateFilter').value;
+                var cards = document.querySelectorAll('#cardsContainer > .col-md-4');
+                cards.forEach(function(card) {
+                  var cardProduct = card.getAttribute('data-product');
+                  var cardDate = card.getAttribute('data-date');
+                  var productMatch = (productValue === 'all' || cardProduct === productValue);
+                  var dateMatch = (!dateValue || cardDate === dateValue);
+                  card.style.display = (productMatch && dateMatch) ? 'block' : 'none';
+                });
+              }
+            </script>
           </body>
           </html>
           EOF
