--- a/.github/workflows/jmeter-tests.yml
+++ b/.github/workflows/jmeter-tests.yml
@@ -1,7 +1,4 @@
 name: JMeter Scheduled Tests
-env:
-  TIMESTAMP: 1
-  
 on:
   schedule:
     - cron: '0 3 * * *'  # every day 3 AM UTC
@@ -68,7 +65,8 @@ jobs:
 
       - name: Create folder for current report
         run: |
-          $TIMESTAMP=$(date +%Y%m%d-%H%M%S)
+          TIMESTAMP=$(date +%Y%m%d-%H%M%S)
+          echo "TIMESTAMP=$TIMESTAMP" >> $GITHUB_ENV
           mkdir -p reports
           cp -R jmeter/global-report reports/$TIMESTAMP
           echo "Report generated in: reports/$TIMESTAMP"
